--- a/back/sleep/build.gradle
+++ b/back/sleep/build.gradle
@@ -2,7 +2,6 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.4'
 	id 'io.spring.dependency-management' version '1.1.4'
-	id "org.sonarqube" version "3.5.0.2730"
 }
 
 group = 'com.sleep'
@@ -56,6 +55,8 @@ dependencies {
 	//test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 
 	//jwt
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
@@ -72,11 +73,4 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
-}
-
-//sonarqube
-sonar {
-	properties {
-		property "sonar.projectKey", "letsdance-sonarqube"
-	}
 }
