--- a/front/package.json
+++ b/front/package.json
@@ -44,6 +44,7 @@
         "@mui/material": "^5.15.20",
         "axios": "^1.7.2",
         "bootstrap": "^5.3.3",
+        "moment": "^2.30.1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.3",
         "react-dom": "^18.2.0",
