--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ out/
 
 # Node.js dependencies
 node_modules/
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.eslintcache
