--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,15 +1,20 @@
-FROM node:20.11.1-alpine as builder
-WORKDIR /app
-ENV PATH /app/node_modules/.bin:$PATH
+FROM node:22-alpine AS builder
 
-COPY . /app
+WORKDIR /app
+
+COPY package.json .
+
 RUN npm install
+
+COPY . .
+
 RUN npm run build
 
-FROM nginx:1.24.0
-RUN rm -rf /etc/nginx/conf.d
-COPY conf /etc/nginx
+FROM nginx:1.26-alpine
+
+# /app/builder에 없고 /app/dist에 있음
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-EXPOSE 3000
+COPY conf/nginx.conf /etc/nginx/conf.d/default.conf
+
 CMD ["nginx", "-g", "daemon off;"]
