Feat: ingress, SSL 추가

--- a/front/conf/nginx.conf
+++ b/front/conf/nginx.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
 
-    location /api/ {
-        proxy_pass http://shortorial-backend-service.default; 
-    }
+    # location /api/ {
+    #     proxy_pass http://shortorial-backend-service.default; 
+    # }
 
     location / {
         root /usr/share/nginx/html;
