--- a/kubernetes/frontend.yml
+++ b/kubernetes/frontend.yml
@@ -9,14 +9,14 @@ spec:
   ports:
     - port: 80
       targetPort: 80
-  type: LoadBalancer
+  type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: shortorial-frontend-deployment
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: shortorial
