--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -3,8 +3,8 @@ name: Backend CI
 on:
   push:
     branches: ["develop"]
-    paths:
-      - "back/**"
+    paths-ignore:
+      - "front/**"
 
 jobs:
   build:
@@ -23,7 +23,8 @@ jobs:
         uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: cd back/sleep
+          ./gradlew build
         env:
           MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
           MYSQL_USER: ${{ secrets.MYSQL_USER }}
