--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,4 +1,4 @@
-name: Backend CI
+name: Backend CI # develop에 모인 코드들로 빌드 시도
 
 on:
   push:
@@ -10,10 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout code # 액션으로 체크아웃
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK 17 # 자바 설치
         uses: actions/setup-java@v4
         with:
           java-version: "17"
@@ -22,12 +22,13 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582
 
-      - name: Build with Gradle
-        run: |
+      - name: Build with Gradle # 빌드 수행
+        run: | # 여러 줄이면 추가
           cd back/sleep
-          chmod +x ./gradlew  # gradlew 파일에 실행 권한 부여
+          chmod +x ./gradlew  
           ./gradlew build
-        env:
+          ./gradlew bootJar
+        env: # 깃헙 secret에 저장한 환경 변수 활용
           MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
           MYSQL_USER: ${{ secrets.MYSQL_USER }}
           MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
