Deploy: front ci 경로 수정

--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -13,16 +13,18 @@ jobs:
       - name: Checkout code # 코드 체크아웃
         uses: actions/checkout@v4
 
-      - name: Set up Node.js # Node.js 설정
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install Dependencies # 종속성 설치
-        run: npm ci
+      - name: Install Dependencies # npm install을 가볍게하는 npm ci
+        run: | # 여러 줄이면 추가
+          cd front
+          npm ci
 
-      - name: Run Tests # 테스트 실행
+      - name: Run Tests
         run: npm test
 
-      - name: Build Project # 프로젝트 빌드
+      - name: Build Project
         run: npm run build
