--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -22,8 +22,23 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and Push Docker Image # Docker 이미지 빌드 및 푸시 # 커밋 번호 이용하면 오류났을 때 그 번호로 쉽게 돌아갈 수 있음
+      # Docker 이미지 빌드 및 푸시
+      # 태그를 커밋 번호로 하면 오류났을 때 그 번호로 쉽게 돌아갈 수 있음
+      # buildx 방식으로 build하면 더 빠름
+      - name: Build and Push Docker Image
         run: |
           cd back/sleep
           docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-backend:${{ github.sha }} --push .
           docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-backend:latest --push .
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: ap-northeast-2
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubActionsEKSRole
+
+      - name: Update kubeconfig
+        run: aws eks update-kubeconfig --region ap-northeast-2 --name shortorial
+
+      - name: Deploy
+        run: kubectl rollout restart deployment/shortorial-backend-deployment
