--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -6,6 +6,11 @@ on:
     paths-ignore:
       - "front/**"
 
+# 깃헙 토큰 권한 생성
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,6 +36,7 @@ jobs:
           docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-backend:${{ github.sha }} --push .
           docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-backend:latest --push .
 
+      # aws에 github actions용 oidc, role 생성해서 연결
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -40,5 +46,6 @@ jobs:
       - name: Update kubeconfig
         run: aws eks update-kubeconfig --region ap-northeast-2 --name shortorial
 
+      # 최신 이미지 반영
       - name: Deploy
         run: kubectl rollout restart deployment/shortorial-backend-deployment
