--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -36,7 +36,7 @@ jobs:
           docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-backend:${{ github.sha }} --push .
           docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-backend:latest --push .
 
-      # aws에 github actions용 oidc, role 생성해서 연결
+      # aws에 github actions용 oidc, role 생성, 정책 추가해서 연결
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
