Deploy: AWS IAM Role 정책 수정

--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -37,10 +37,8 @@ jobs:
           docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-backend:latest --push .
 
       # aws에 github actions용 oidc, role 생성
-      # 클러스트 access에 github token과 aws oidc 연결한 Role 생성
-      # ListAccessEntries, DescribeAccessEntry, UpdateAccessEntry, ListAccessPolicies, AssociateAccessPolicy, DisassociateAccessPolicy
-      # ListClusters, ListNodegroups, DescribeCluster, DescribeNodegroup, UpdateClusterConfig, UpdateNodegroupConfig
-      # AmazonEKSClusterAdminPolicy 추가
+      # 클러스트 access에 github token과 aws oidc 연결한 Role 추가, AmazonEKSClusterAdminPolicy 추가
+      # ListClusters, ListNodegroups, DescribeCluster, DescribeNodegroup
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
