--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -1,4 +1,4 @@
-name: Backend CI # develop에 모인 코드들로 빌드 시도
+name: Backend CD # develop에서 build 성공한 코드만 release에 push
 
 on:
   push:
@@ -36,9 +36,9 @@ jobs:
           docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-backend:${{ github.sha }} --push .
           docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-backend:latest --push .
 
-      # aws에 github actions용 oidc, role 생성
+      # aws에 github actions용 oidc, role 생성(ListClusters, ListNodegroups, DescribeCluster, DescribeNodegroup)
       # 클러스트 access에 github token과 aws oidc 연결한 Role 추가, AmazonEKSClusterAdminPolicy 추가
-      # ListClusters, ListNodegroups, DescribeCluster, DescribeNodegroup
+      # https://docs.github.com/en/actions/security-for-github-actions/security-hardening-your-deployments/configuring-openid-connect-in-amazon-web-services
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
