Chore: 백엔드 설정파일 수정

--- a/back/sleep/src/main/resources/application.yml
+++ b/back/sleep/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
     defer-datasource-initialization: false
   sql:
     init:
-      mode: false
+      mode: never
   output:
     ansi.enabled: always
   servlet:
