Deploy: 도커 컴포즈에 맞춰 변경

--- a/front/conf/nginx.conf
+++ b/front/conf/nginx.conf
@@ -1,9 +1,10 @@
 server {
     listen 80;
 
-    # location /api/ {
-    #     proxy_pass http://shortorial-backend-service.default; 
-    # }
+    location /api/ {
+        # proxy_pass http://shortorial-backend-service.default; 
+        proxy_pass http://backend:8080;
+    }
 
     location / {
         root /usr/share/nginx/html;
