--- a/back/sleep/src/main/resources/application.yml
+++ b/back/sleep/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     # 기본 포트가 3306이라 포트 번호 명시 안해도 연결함
-    url: jdbc:mysql://shortorial-database-service.default/dance?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://${MYSQL_URL}/dance?serverTimezone=UTC&characterEncoding=UTF-8
     username: ${MYSQL_USER}
     password: ${MYSQL_PASSWORD}
   jpa:
@@ -32,7 +32,7 @@ spring:
     redis:
       port: 6379
       # 기본 포트가 6379라 포트 번호 명시 안해도 연결함
-      host: shortorial-redis-service.default
+      host: ${REDIS_URL}
 cloud:
   aws:
     s3:
@@ -46,4 +46,4 @@ cloud:
       secret-key: ${SECRET_KEY}
 
 jwt:
-  secret: Tkxkfgkrpgownjwlqdprkrhtlvekwhfflek
+  secret: ${JWT_SECRET}
