--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -1,53 +1,92 @@
-name: Backend CD # develop에서 build 성공한 코드만 release에 push
+name: Backend CD # release 브랜치로 머지된 코드 자동 배포
 
 on:
   push:
-    branches: ["release-*"]
+    branches: ["release-*"] # release-* 브랜치에 push 될 때만 실행
     paths-ignore:
-      - "front/**"
+      - "front/**" # 프론트엔드는 배포에서 제외
 
-# 깃헙 토큰 권한 생성
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code # 액션으로 체크아웃
+      # 1. 깃허브 레포지토리 코드 체크아웃
+      - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Docker Buildx 설정 (멀티 플랫폼 빌드 지원)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to Docker Hub # 도커 허브 로그인
+      # 3. Docker Hub 로그인
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Docker 이미지 빌드 및 푸시
-      # 태그를 커밋 번호로 하면 오류났을 때 그 번호로 쉽게 돌아갈 수 있음
-      # buildx 방식으로 build하면 더 빠름
+      # 4. Docker 이미지 빌드 및 Docker Hub에 푸시 (커밋 SHA를 태그로 사용)
       - name: Build and Push Docker Image
+        id: build-image
         run: |
-          cd back/sleep
-          docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-backend:${{ github.sha }} --push .
-          docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-backend:latest --push .
+          IMAGE=${{ secrets.DOCKER_USERNAME }}/shortorial-be:${{ github.sha }}
+          docker buildx build -t $IMAGE --push back/sleep
+          echo "image=$IMAGE" >> $GITHUB_OUTPUT
 
-      # aws에 github actions용 oidc, role 생성(ListClusters, ListNodegroups, DescribeCluster, DescribeNodegroup)
-      # 클러스트 access에 github token과 aws oidc 연결한 Role 추가, AmazonEKSClusterAdminPolicy 추가
-      # https://docs.github.com/en/actions/security-for-github-actions/security-hardening-your-deployments/configuring-openid-connect-in-amazon-web-services
+      # 5. AWS OIDC로 인증 (IAM Role과 GitHub 연결)
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: ap-northeast-2
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubActionsEKSRole
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubTokenECSRole
 
-      - name: Update kubeconfig
-        run: aws eks update-kubeconfig --region ap-northeast-2 --name shortorial
+      # 6. task-definition-base.json에 이미지와 환경변수 값 치환하여 task-definition.json 생성
+      - name: Build ECS task definition with jq
+        run: |
+          IMAGE=${{ secrets.DOCKER_USERNAME }}/shortorial-be:${{ github.sha }}
 
-      #  eks에 최신 이미지 반영
-      - name: Deploy
-        run: kubectl rollout restart deployment/shortorial-backend-deployment
+          jq --arg img "$IMAGE" \
+            --arg AWS_ACCOUNT_ID "${{ secrets.AWS_ACCOUNT_ID }}" \
+            --arg MYSQL_URL "${{ secrets.MYSQL_URL }}" \
+            --arg MYSQL_USER "${{ secrets.MYSQL_USER }}" \
+            --arg MYSQL_PASSWORD "${{ secrets.MYSQL_PASSWORD }}" \
+            --arg REDIS_URL "${{ secrets.REDIS_URL }}" \
+            --arg JWT_SECRET "${{ secrets.JWT_SECRET }}" \
+            --arg ACCESS_KEY "${{ secrets.ACCESS_KEY }}" \
+            --arg SECRET_KEY "${{ secrets.SECRET_KEY }}" \
+          '
+          .executionRoleArn = "arn:aws:iam::\($AWS_ACCOUNT_ID):role/ecsTaskExecutionRole" |
+          .containerDefinitions[0].image = $img |
+          (.containerDefinitions[0].environment[] | select(.name == "MYSQL_URL")      ).value = $MYSQL_URL |
+          (.containerDefinitions[0].environment[] | select(.name == "MYSQL_USER")     ).value = $MYSQL_USER |
+          (.containerDefinitions[0].environment[] | select(.name == "MYSQL_PASSWORD") ).value = $MYSQL_PASSWORD |
+          (.containerDefinitions[0].environment[] | select(.name == "REDIS_URL")      ).value = $REDIS_URL |
+          (.containerDefinitions[0].environment[] | select(.name == "JWT_SECRET")     ).value = $JWT_SECRET |
+          (.containerDefinitions[0].environment[] | select(.name == "ACCESS_KEY")     ).value = $ACCESS_KEY |
+          (.containerDefinitions[0].environment[] | select(.name == "SECRET_KEY")     ).value = $SECRET_KEY
+          ' .aws/task-definition-base.json > task-definition.json
+
+      # 7. ECS에 task 정의 등록
+      - name: Register ECS Task Definition
+        run: |
+          aws ecs register-task-definition \
+            --cli-input-json file://task-definition.json
+
+      # 8. ECS 서비스에 최신 revision 반영하여 롤링 배포
+      - name: Deploy to Amazon ECS
+        run: |
+          REVISION=$(aws ecs describe-task-definition \
+            --task-definition shortorial-be-task \
+            --query "taskDefinition.revision" \
+            --output text)
+
+          aws ecs update-service \
+            --cluster Shortorial \
+            --service shortorial-be-svc \
+            --task-definition shortorial-be-task:$REVISION \
+            --force-new-deployment
