--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -1,36 +1,38 @@
-name: Backend CD # develop에서 build 성공한 코드만 release에 push
+name: Backend CD # release 브랜치로 머지된 코드 자동 배포
 
 on:
   push:
-    branches: ["release-*"]
+    branches: ["release-*"] # release-* 브랜치에 push 될 때만 실행
     paths-ignore:
-      - "front/**"
+      - "front/**" # 프론트엔드는 배포에서 제외
 
-# 깃헙 토큰 권한 생성
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code # 액션으로 체크아웃
+      # 1. 깃허브 레포지토리 코드 체크아웃
+      - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Docker Buildx 설정 (멀티 플랫폼 빌드 지원)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to Docker Hub # 도커 허브 로그인
+      # 3. Docker Hub 로그인
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Docker 이미지 빌드 및 푸시
-      # 태그를 커밋 번호로 하면 오류났을 때 그 번호로 쉽게 돌아갈 수 있음
-      # buildx 방식으로 build하면 더 빠름
+      # 4. Docker 이미지 빌드 및 Docker Hub에 푸시 (커밋 SHA를 태그로 사용)
       - name: Build and Push Docker Image
+        id: build-image
         run: |
           IMAGE=${{ secrets.DOCKER_REPO }}/shortorial-be:${{ github.sha }}
           docker buildx build -t $IMAGE --push back/sleep
@@ -40,7 +42,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: ap-northeast-2
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubActionsEKSRole
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubTokenECSRole
 
       # jq는 JSON 데이터를 수정하고 변환할 수 있는 CLI 도구
       # 6-1. jq 안에서 사용할 변수 정의 (이미지 경로와 GitHub Secrets 값들을 --arg로 전달)
@@ -51,7 +53,7 @@ jobs:
       #      - executionRoleArn: ECS 실행 역할 ARN 설정
       #      - containerDefinitions[0].image: 컨테이너에 사용할 도커 이미지로 치환
       #      - containerDefinitions[0].environment: 환경변수 dummy 값을 실제 값으로 치환
-      # 6-4. 값이 치환된 task-definition-base.json 파일을 task-definition.json 파일로 생성
+      # 6-4. 값이 치환된 be-task-definition-base.json 파일을 be-task-definition.json 파일로 생성
       - name: Build ECS task definition with jq
         run: |
           jq --arg img "${{ secrets.DOCKER_REPO }}/shortorial-be:${{ github.sha }}" \
@@ -73,28 +75,26 @@ jobs:
           (.containerDefinitions[0].environment[] | select(.name == "JWT_SECRET")     ).value = $JWT_SECRET |
           (.containerDefinitions[0].environment[] | select(.name == "ACCESS_KEY")     ).value = $ACCESS_KEY |
           (.containerDefinitions[0].environment[] | select(.name == "SECRET_KEY")     ).value = $SECRET_KEY
-          ' .aws/task-definition-base.json > task-definition.json
+          ' .aws/be-task-definition-base.json > be-task-definition.json
 
-      # 7. AWS CLI 명령 중 register-task-definition 활용하여 새로운 TASK 등록
-      # 기존과 같은 family라면 revision을 자동으로 하나 올려서 새로 등록
-      # https://docs.aws.amazon.com/ko_kr/cli/latest/userguide/cli_ecs_code_examples.html
+      # 7. AWS CLI 명령으로 task definition 등록
+      #    - 동일한 family 이름이면 revision이 자동으로 증가됨
+      #    - 등록 응답에서 최신 revision을 추출하여 step 출력값으로 저장
+      #    - 참고: https://docs.aws.amazon.com/ko_kr/cli/latest/userguide/cli_ecs_code_examples.html
       - name: Register ECS Task Definition
+        id: register-task
         run: |
-          aws ecs register-task-definition \
-            --cli-input-json file://task-definition.json
+          RESPONSE=$(aws ecs register-task-definition \
+          --cli-input-json file://be-task-definition.json)
 
-      # 8-1. 해당 family 이름(shortorial-be-task)의 최신 revision을 자동으로 조회
-      # 8-2. revision 추출(쿼리)하고 텍스트로 바꿔서 REVISION 변수에 저장
-      # 8-3. 최신 revision을 사용해 ECS 서비스 업데이트 (롤링 배포 실행)
+          REVISION=$(echo "$RESPONSE" | jq -r '.taskDefinition.revision')
+          echo "revision=$REVISION" >> $GITHUB_OUTPUT
+
+      # 8. 최신 revision(register-task step 출력 값)을 사용해 ECS 서비스 업데이트
       - name: Deploy to Amazon ECS
         run: |
-          REVISION=$(aws ecs describe-task-definition \
-            --task-definition shortorial-be-task \
-            --query "taskDefinition.revision" \
-            --output text)
-
           aws ecs update-service \
             --cluster Shortorial \
             --service shortorial-be-svc \
-            --task-definition shortorial-be-task:$REVISION \
+            --task-definition shortorial-be-task:${register-task.outputs.revision} \
             --force-new-deployment
