--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -1,53 +1,88 @@
-name: Frontend CD # develop에서 build 성공한 코드만 release에 push
+name: Frontend CD # release 브랜치로 머지된 코드 자동 배포
 
 on:
   push:
-    branches: ["release-*"]
+    branches: ["release-*"] # release-* 브랜치에 push 될 때만 실행
     paths-ignore:
-      - "back/**"
+      - "back/**" # 백엔드는 배포에서 제외
 
-# 깃헙 토큰 권한 생성
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code # 액션으로 체크아웃
+      # 1. 깃허브 레포지토리 코드 체크아웃
+      - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Docker Buildx 설정 (멀티 플랫폼 빌드 지원)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to Docker Hub # 도커 허브 로그인
+      # 3. Docker Hub 로그인
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Docker 이미지 빌드 및 푸시
-      # 태그를 커밋 번호로 하면 오류났을 때 그 번호로 쉽게 돌아갈 수 있음
-      # buildx 방식으로 build하면 더 빠름
+      # 4. Docker 이미지 빌드 및 Docker Hub에 푸시 (커밋 SHA를 태그로 사용)
       - name: Build and Push Docker Image
+        id: build-image
         run: |
-          cd front
-          docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-frontend:${{ github.sha }} --push .
-          docker buildx build -t ${{ secrets.DOCKER_REPO }}/shortorial-frontend:latest --push .
+          IMAGE=${{ secrets.DOCKER_REPO }}/shortorial-fe:${{ github.sha }}
+          docker buildx build -t $IMAGE --push front
 
-      # aws에 github actions용 oidc, role 생성(ListClusters, ListNodegroups, DescribeCluster, DescribeNodegroup)
-      # 클러스트 access에 github token과 aws oidc 연결한 Role 추가, AmazonEKSClusterAdminPolicy 추가
-      # https://docs.github.com/en/actions/security-for-github-actions/security-hardening-your-deployments/configuring-openid-connect-in-amazon-web-services
+      # 5. AWS OIDC로 인증 (추정할 IAM Role과 GitHub 연결)
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: ap-northeast-2
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubActionsEKSRole
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubTokenECSRole
 
-      - name: Update kubeconfig
-        run: aws eks update-kubeconfig --region ap-northeast-2 --name shortorial
+      # jq는 JSON 데이터를 수정하고 변환할 수 있는 CLI 도구
+      # 6-1. jq 안에서 사용할 변수 정의 (이미지 경로와 GitHub Secrets 값들을 --arg로 전달)
+      #      - --arg 옵션 bash 변수(Github Actions Secret 등)를 jq 내부 변수로 전달
+      #      - 예: secrets.ACCESS_KEY → --arg ACCESS_KEY "$ACCESS_KEY" → jq 내부에서 $ACCESS_KEY로 사용 가능
+      # 6-2. 작은따옴표(')로 jq 스크립트 블록 시작
+      # 6-3. task-definition-base.json 파일에서 필요한 값 치환
+      #      - executionRoleArn: ECS 실행 역할 ARN 설정
+      #      - containerDefinitions[0].image: 컨테이너에 사용할 도커 이미지로 치환
+      #      - containerDefinitions[0].environment: 환경변수 dummy 값을 실제 값으로 치환
+      # 6-4. 값이 치환된 fe-task-definition-base.json 파일을 fe-task-definition.json 파일로 생성
+      - name: Build ECS task definition with jq
+        run: |
+          jq --arg img "${{ secrets.DOCKER_REPO }}/shortorial-fe:${{ github.sha }}" \
+            --arg AWS_ACCOUNT_ID "${{ secrets.AWS_ACCOUNT_ID }}" \
+            --arg VITE_HOME_URL "https://www.shortorial.site" \
+          '
+          .executionRoleArn = "arn:aws:iam::\($AWS_ACCOUNT_ID):role/ecsTaskExecutionRole" |
+          .containerDefinitions[0].image = $img |
+          (.containerDefinitions[0].environment[] | select(.name == "VITE_HOME_URL")      ).value = $VITE_HOME_URL |
+          ' .aws/fe-task-definition-base.json > fe-task-definition.json
 
-      #  eks에 최신 이미지 반영
-      - name: Deploy
-        run: kubectl rollout restart deployment/shortorial-frontend-deployment
+      # 7. AWS CLI 명령으로 task definition 등록
+      #    - 동일한 family 이름이면 revision이 자동으로 증가됨
+      #    - 등록 응답에서 최신 revision을 추출하여 step 출력값으로 저장
+      #    - 참고: https://docs.aws.amazon.com/ko_kr/cli/latest/userguide/cli_ecs_code_examples.html
+      - name: Register ECS Task Definition
+        id: register-task
+        run: |
+          RESPONSE=$(aws ecs register-task-definition \
+          --cli-input-json file://fe-task-definition.json)
+
+          REVISION=$(echo "$RESPONSE" | jq -r '.taskDefinition.revision')
+          echo "revision=$REVISION" >> $GITHUB_OUTPUT
+
+      # 8. 최신 revision(register-task step 출력 값)을 사용해 ECS 서비스 업데이트
+      - name: Deploy to Amazon ECS
+        run: |
+          aws ecs update-service \
+            --cluster Shortorial \
+            --service shortorial-fe-svc \
+            --task-definition shortorial-be-task:${register-task.outputs.revision} \
+            --force-new-deployment
