--- a/front/conf/nginx.conf
+++ b/front/conf/nginx.conf
@@ -2,12 +2,13 @@ server {
     listen 80;
 
     location /api/ {
+        proxy_pass http://www.shortorial.site;
         #proxy_pass http://shortorial-backend-service.default; 
 
         # 169.254.169.253는 AWS의 VPC DNS 서버(Private DNS) 중 하나로, AWS Service Discovery(AWS Cloud Map) 및 Route 53의 내부 DNS 조회를 담당하는 주소
         # Nginx에서 resolver를 설정하지 않으면, 서비스가 처음 조회한 IP를 계속 유지하기 때문에 업데이트된 서비스의 새로운 IP를 반영하지 못하는 문제
-        resolver 169.254.169.253 valid=10s; 
-        proxy_pass http://shortorial-be-svc.shortorial-ns:8080; # 10초마다 shortorial-be-svc.shortorial.ns의 최신 IP를 조회
+        #resolver 169.254.169.253 valid=10s; 
+        #proxy_pass http://shortorial-be-svc.shortorial-ns:8080; # 10초마다 shortorial-be-svc.shortorial.ns의 최신 IP를 조회
     }
 
     location / {
