Fix: nginx proxy pass 수정

--- a/front/conf/nginx.conf
+++ b/front/conf/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
 
     location /api/ {
-        proxy_pass http://www.shortorial.site;
+        proxy_pass https://www.shortorial.site;
         #proxy_pass http://shortorial-backend-service.default; 
 
         # 169.254.169.253는 AWS의 VPC DNS 서버(Private DNS) 중 하나로, AWS Service Discovery(AWS Cloud Map) 및 Route 53의 내부 DNS 조회를 담당하는 주소
