--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: ["develop"]
     paths-ignore:
-      - "front/**" # 프론트엔드 코드 변경은 무시
+      - "front/**" # 프론트 파일 변경은 감지 안 함
 
 jobs:
   build:
@@ -24,14 +24,13 @@ jobs:
 
       - name: Build with Gradle # 빌드 수행
         working-directory: back/sleep
-        run: | # 여러 줄이면 추가
-          cd back/sleep  
-          ./gradlew build -x test
+        run: ./gradlew build
         env: # 깃헙 secret에 저장한 환경 변수 활용
-          MYSQL_URL: ${{ secrets.MYSQL_URL }}
-          MYSQL_USER: ${{ secrets.MYSQL_USER }}
-          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-          REDIS_URL: ${{ secrets.REDIS_URL }}
+          MYSQL_URL: ${{ secrets.MYSQL_URL_TEST }}
+          MYSQL_USER: ${{ secrets.MYSQL_USER_TEST }}
+          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD_TEST }}
+          REDIS_URL: ${{ secrets.REDIS_URL_TEST }}
           ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          JWT_SECRET: ${{secrets.JWT_SECRET}}
+          JWT_SECRET: ${{secrets.JWT_SECRET_TEST}}
+          VITE_HOME_URL: ${{ secrets.VITE_HOME_URL_TEST }}
