--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -69,7 +69,7 @@ jobs:
             --arg VITE_HOME_URL "${{ secrets.VITE_HOME_URL }}" \
             --arg SPRING_PROFILE "prod"
           '
-          .family = "shortorial-be-task"
+          .family = "shortorial-be-task" |
           .executionRoleArn = "arn:aws:iam::\($AWS_ACCOUNT_ID):role/ecsTaskExecutionRole" |
           .containerDefinitions[0].image = $img |
           (.containerDefinitions[0].environment[] | select(.name == "MYSQL_URL")      ).value = $MYSQL_URL |
