Chore: Cloud Watch 로그 그룹 지정

--- a/.github/workflows/backend-test-cd.yml
+++ b/.github/workflows/backend-test-cd.yml
@@ -80,7 +80,8 @@ jobs:
           (.containerDefinitions[0].environment[] | select(.name == "ACCESS_KEY")     ).value = $ACCESS_KEY |
           (.containerDefinitions[0].environment[] | select(.name == "SECRET_KEY")     ).value = $SECRET_KEY |
           (.containerDefinitions[0].environment[] | select(.name == "VITE_HOME_URL")     ).value = $VITE_HOME_URL |
-          (.containerDefinitions[0].environment[] | select(.name == "SPRING_PROFILES_ACTIVE")).value = $SPRING_PROFILE
+          (.containerDefinitions[0].environment[] | select(.name == "SPRING_PROFILES_ACTIVE")).value = $SPRING_PROFILE |
+          (.containerDefinitions[0].logConfiguration.options."awslogs-group") = "/ecs/shortorial-test-be-task"
           ' .aws/be-task-definition-base.json > test-be-task-definition.json
 
       # 7. AWS CLI 명령으로 task definition 등록
