--- a/.github/workflows/frontend-test-cd.yml
+++ b/.github/workflows/frontend-test-cd.yml
@@ -2,7 +2,7 @@ name: Frontend CD # release 브랜치로 머지된 코드 자동 배포
 
 on:
   push:
-    branches: ["main"] # main 브랜치에 push 될 때만 실행
+    branches: ["release-*"] # release-* 브랜치에 push 될 때만 실행
     paths-ignore:
       - "back/**" # 백엔드 파일 변경은 감지 안 함
 
@@ -50,7 +50,6 @@ jobs:
       #      - 예: secrets.ACCESS_KEY → --arg ACCESS_KEY "$ACCESS_KEY" → jq 내부에서 $ACCESS_KEY로 사용 가능
       # 6-2. 작은따옴표(')로 jq 스크립트 블록 시작
       # 6-3. task-definition-base.json 파일에서 필요한 값 치환
-      #      - family: ECS Task Family 지정
       #      - executionRoleArn: ECS 실행 역할 ARN 설정
       #      - containerDefinitions[0].image: 컨테이너에 사용할 도커 이미지로 치환
       #      - containerDefinitions[0].environment: 환경변수 dummy 값을 실제 값으로 치환
@@ -59,13 +58,13 @@ jobs:
         run: |
           jq --arg img "${{ secrets.DOCKER_REPO }}/shortorial-fe:${{ github.sha }}" \
             --arg AWS_ACCOUNT_ID "${{ secrets.AWS_ACCOUNT_ID }}" \
-            --arg VITE_HOME_URL "https://www.shortorial.site" \
+            --arg VITE_HOME_URL "https://test.shortorial.site" \
           '
-          .family = "shortorial-fe-task"
+          .family = "shortorial-test-fe-task"
           .executionRoleArn = "arn:aws:iam::\($AWS_ACCOUNT_ID):role/ecsTaskExecutionRole" |
           .containerDefinitions[0].image = $img |
           (.containerDefinitions[0].environment[] | select(.name == "VITE_HOME_URL")      ).value = $VITE_HOME_URL |
-          (.containerDefinitions[0].logConfiguration.options."awslogs-group") = "/ecs/shortorial-fe-task"
+          (.containerDefinitions[0].logConfiguration.options."awslogs-group") = "/ecs/shortorial-test-fe-task"
           ' .aws/fe-task-definition-base.json > fe-task-definition.json
 
       # 7. AWS CLI 명령으로 task definition 등록
@@ -86,6 +85,6 @@ jobs:
         run: |
           aws ecs update-service \
             --cluster Shortorial \
-            --service shortorial-fe-svc \
-            --task-definition shortorial-fe-task:${register-task.outputs.revision} \
+            --service shortorial-test-fe-svc \
+            --task-definition shortorial-test-fe-task:${register-task.outputs.revision} \
             --force-new-deployment
