--- a/.github/workflows/frontend-test-cd.yml
+++ b/.github/workflows/frontend-test-cd.yml
@@ -86,5 +86,5 @@ jobs:
           aws ecs update-service \
             --cluster Shortorial \
             --service shortorial-test-fe-svc \
-            --task-definition shortorial-test-fe-task:${register-task.outputs.revision} \
+            --task-definition shortorial-test-fe-task:${{ steps.register-task.outputs.revision}} \
             --force-new-deployment
