--- a/.github/workflows/frontend-test-cd.yml
+++ b/.github/workflows/frontend-test-cd.yml
@@ -60,7 +60,7 @@ jobs:
             --arg AWS_ACCOUNT_ID "${{ secrets.AWS_ACCOUNT_ID }}" \
             --arg VITE_HOME_URL "https://test.shortorial.site" \
           '
-          .family = "shortorial-test-fe-task"
+          .family = "shortorial-test-fe-task" |
           .executionRoleArn = "arn:aws:iam::\($AWS_ACCOUNT_ID):role/ecsTaskExecutionRole" |
           .containerDefinitions[0].image = $img |
           (.containerDefinitions[0].environment[] | select(.name == "VITE_HOME_URL")      ).value = $VITE_HOME_URL |
