Chore: nginx 문법 수정

--- a/front/conf/default.template.conf
+++ b/front/conf/default.template.conf
@@ -3,7 +3,7 @@ server {
 
     location /api/ {
         #proxy_pass http://shortorial-backend-service.default;
-        proxy_pass ${VITE_HOME_URL}  
+        proxy_pass ${VITE_HOME_URL};  
     }
 
     location / {
