Fix: 테스트 환경에서는 로그 수준 DEBUG로 설정

--- a/back/sleep/src/main/resources/application-test.yml
+++ b/back/sleep/src/main/resources/application-test.yml
@@ -15,7 +15,7 @@ spring:
       max-lifetime: 1800000
     properties:
       hibernate:
-        format_sql: false
+        format_sql: true
     show_sql: false
     defer-datasource-initialization: false
   sql:
@@ -48,3 +48,8 @@ jwt:
 
 cors:
   allowed-origin: ${VITE_HOME_URL}
+
+logging:
+  level:
+    root: DEBUG
+    org.hibernate.SQL: DEBUG
