Deploy: 프론트 운영 서버 이미지 태그 latest로 변경
release 브랜치 이미지 빌드 할 때 sha, latest 태그로 이미지 2개 만들기
테스트 통과하면 latest 태그 이미지를 이용하여 task 생성(새로 빌드 안 함)

--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -19,24 +19,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Docker Buildx 설정 (멀티 플랫폼 빌드 지원)
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      # 3. Docker Hub 로그인
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      # 4. Docker 이미지 빌드 및 Docker Hub에 푸시 (커밋 SHA를 태그로 사용)
-      - name: Build and Push Docker Image
-        id: build-image
-        run: |
-          IMAGE=${{ secrets.DOCKER_REPO }}/shortorial-fe:${{ github.sha }}
-          docker buildx build -t $IMAGE --push front
-
       # 5. AWS OIDC로 인증 (추정할 IAM Role과 GitHub 연결)
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -57,14 +39,14 @@ jobs:
       # 6-4. 값이 치환된 fe-task-definition-base.json 파일을 fe-task-definition.json 파일로 생성
       - name: Build ECS task definition with jq
         run: |
-          jq --arg img "${{ secrets.DOCKER_REPO }}/shortorial-fe:${{ github.sha }}" \
+          jq --arg img "${{ secrets.DOCKER_REPO }}/shortorial-fe:latest" \
             --arg AWS_ACCOUNT_ID "${{ secrets.AWS_ACCOUNT_ID }}" \
             --arg VITE_HOME_URL "https://www.shortorial.site" \
           '
           .family = "shortorial-fe-task" |
           .executionRoleArn = "arn:aws:iam::\($AWS_ACCOUNT_ID):role/ecsTaskExecutionRole" |
           .containerDefinitions[0].image = $img |
-          (.containerDefinitions[0].environment[] | select(.name == "VITE_HOME_URL")      ).value = $VITE_HOME_URL |
+          (.containerDefinitions[0].environment[] | select(.name == "VITE_HOME_URL") ).value = $VITE_HOME_URL |
           (.containerDefinitions[0].logConfiguration.options."awslogs-group") = "/ecs/shortorial-fe-task"
           ' .aws/fe-task-definition-base.json > fe-task-definition.json
 
