--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -39,7 +39,7 @@ jobs:
       # 6-4. 값이 치환된 be-task-definition-base.json 파일을 be-task-definition.json 파일로 생성
       - name: Build ECS task definition with jq
         run: |
-          jq --arg img "${{ secrets.DOCKER_REPO }}/shortorial-be:latest" \
+          jq --arg img "${{ secrets.DOCKER_REPO }}/shortorial-be:1.0.0" \
             --arg AWS_ACCOUNT_ID "${{ secrets.AWS_ACCOUNT_ID }}" \
             --arg MYSQL_URL "${{ secrets.MYSQL_URL }}" \
             --arg MYSQL_USER "${{ secrets.MYSQL_USER }}" \
