--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -5,6 +5,7 @@ on:
     branches: ["main"] # main 브랜치에 push 될 때만 실행
     paths-ignore:
       - "front/**" # 프론트 파일 변경은 감지 안 함
+      - "README.md"
 
 permissions:
   id-token: write
